# uxplay-windows

./: ! run.bat  .gitignore  .gitmodules  BUILDING  BUILDING.md  CMakeLists.txt  CREDITS.md  DEVELOPERS-GUIDE.md  DLL-LIST.txt  LICENSE  LICENSE.md  README.md  clangarm64_dependencies.txt  clean.sh  dll-libs-list.txt  dnssd.vcxproj  make_release.sh  make_release_CI.sh  make_release_CI_arm64.sh  product.wxs  script.iss  tray.py  ucrt_arm64_dependencies.txt  ucrt_deps.txt  uxplay_options.txt
.github/ISSUE_TEMPLATE/: cpprewrite.yml
.github/workflows/: build-bonjour-sdk.yml  build-uxplay-windows-arm64.yml  build-uxplay-windows-win10-x64.yml  build_uxplay-windows-v2.yml  build_uxplay-windows.yml  gimmie_lib.yml
docs/: BUILDING.md  LICENSE.rtf
mdnsresponder-patches/: 2881.patch
src/: airplayworker.cpp  airplayworker.h  main.cpp  mainwindow.cpp  mainwindow.h  mdns_responder.cpp  mdns_responder.hpp  resources.rc
stuff/: dll.txt  dll_arm64.txt  mDNSResponder_options.txt  uxplay_arguments_list.txt
uxplay-windows/: dll-libs-list.txt  dnssd.vcxproj  script.iss  tray.py
uxplay-windows - コピー/: README.md
uxplay-windows - コピー/.github/workflows/: build_uxplay-windows.yml
uxplay-windows/.github/workflows/: build_uxplay-windows.yml
